--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   create-issue:
     name: Create Jira issue
+    permissions:
+      issues: write
     runs-on: ubuntu-latest
     steps:
       - name: Login
